// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal Story 1`] = `
<section>
  <div
    className="modal fade in undefined"
    onClick={[Function]}
    role="dialog"
    tabIndex="-1"
  >
    <div
      className="modal-dialog"
      role="document"
    >
      <div
        className="modal-content"
      >
        <div
          className="modal-header"
        >
          <button
            aria-label="Close"
            className="close"
            onClick={[Function]}
            type="button"
          >
            <span
              aria-hidden="true"
            >
              ×
            </span>
          </button>
          <h4
            className="modal-title"
          >
            
          </h4>
        </div>
        <div
          className="modal-body"
        >
          children
        </div>
      </div>
    </div>
  </div>
  <div
    className="modal-background"
  />
</section>
`;

exports[`Show NotFound renders Logout Modal correctly 1`] = `
<section>
  <div
    className="modal fade in undefined"
    onClick={[Function]}
    role="dialog"
    tabIndex="-1"
  >
    <div
      className="modal-dialog"
      role="document"
    >
      <div
        className="modal-content"
      >
        <div
          className="modal-header"
        >
          <button
            aria-label="Close"
            className="close"
            onClick={[Function]}
            type="button"
          >
            <span
              aria-hidden="true"
            >
              ×
            </span>
          </button>
          <h4
            className="modal-title"
          >
            Are you sure you want to log out?
          </h4>
        </div>
        <div
          className="modal-body"
        >
          <p>
            You are in the middle of a session and all unsaved changes may be lost
          </p>
          <div
            className="row"
          >
            <div
              className="col-xs-12"
            >
              <div
                className="pull-right"
              >
                <button
                  className="btn-default btn"
                  onClick={undefined}
                >
                  Cancel
                </button>
                <button
                  className="btn-primary btn"
                  onClick={undefined}
                >
                  LogOut
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="modal-background"
  />
</section>
`;

exports[`Show NotFound renders Wrapper Correctly 1`] = `
<section>
  <div
    className="modal fade in undefined"
    onClick={[Function]}
    role="dialog"
    tabIndex="-1"
  >
    <div
      className="modal-dialog"
      role="document"
    >
      <div
        className="modal-content"
      >
        <div
          className="modal-header"
        >
          <button
            aria-label="Close"
            className="close"
            onClick={[Function]}
            type="button"
          >
            <span
              aria-hidden="true"
            >
              ×
            </span>
          </button>
          <h4
            className="modal-title"
          >
            
          </h4>
        </div>
        <div
          className="modal-body"
        >
          children
        </div>
      </div>
    </div>
  </div>
  <div
    className="modal-background"
  />
</section>
`;
